src/test/deca/syntax/valid/test_synt/control_structures/while_next_to_while.deca
// Description:
//    Declaration dun while apres un while
//
// Resultats:
//    Pas d'erreur
//
// Historique:
//    cree le 14/01/2022

{
    while(true) {
    } while(true) {}
}